# cli-vuln

./: README.md  arquivo.php  pyproject.toml
cli_vuln/: __init__.py  main.py
cli_vuln/common/: abc.py
cli_vuln/core/: banner.py  utils.py
cli_vuln/core/security/: model_utils.py  scanning_utils.py
cli_vuln/models/: model.joblib
cli_vuln/vulnerabilities/: ip_expose.py  sqli.py  xss.py
tests/feature/: cli_vuln_scan_test.py
