[tool.poetry]
name = "cli-vuln"
version = "0.1.0"
description = ""
authors = ["giovanni.franco <giovanni.franco@nanoincub.com.br>"]
readme = "README.md"
packages = [{include = "cli_vuln"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
termcolor = "^2.3.0"
joblib = "^1.3.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
keyboard = "^0.13.5"
readchar = "^4.0.5"

[tool.poetry.scripts]
cli-start = 'cli_vuln.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
